パラメータを７つに。レイアウト修正。

--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,9 @@
 
 {% block body %}
 <h2 class="m-5">結合分布結果</h2>
-<div>
-    <a class="btn btn-outline-primary" href="/" role="button">Return</a>
+<div class="form">
+    <form class="m-4" action="/create" method='GET'>
+        <a class="btn btn-outline-primary" href="/create" role="button">Create Again</a>
+    </form>
 </div>
 {% endblock %}
