pin幅,graph range 追加

--- a/templates/create.html
+++ b/templates/create.html
@@ -56,6 +56,21 @@
                 </div>
             </div>
         </div>
+        <div class="row mb-1">
+            <h5>グラフパラメータ</h5>
+        </div>
+        <div class="form-control mb-4" aria-label="Default example"> 
+            <div class="row mb-3">  
+                <div class="form-group col-sm-6">
+                    <label for="div">pin分割数(div)（1/div=pin幅） : </label>
+                    <input type="text" value=100 class="form-control" name="div">
+                </div>
+                <div class="form-group col-sm-6">
+                    <label for="graph_range">グラフ範囲（一辺の長さ） : </label>
+                    <input type="text" value=5 class="form-control" name="graph_range">
+                </div>
+            </div>
+        </div>
         <!--div class="form-group pb-3">
             <label for="due">Due : </label>
             <input type="date" name="due" required>
