--- a/templates/create.html
+++ b/templates/create.html
@@ -45,13 +45,13 @@
                     <input type="text" value=4000000 class="form-control" name="num_sample">
                 </div>
                 <div class="form-group col-sm-6">
-                    <label for="time_stamp">時間幅 : </label>
-                    <input type="text" value=0.05 class="form-control" name="time_stamp_response">
+                    <label for="time_stamp_response">時間幅 : </label>
+                    <input type="text" value=0.1 class="form-control" name="time_stamp_response">
                 </div>
             </div>
             <div class="row mb-3">
                 <div class="form-group col-sm-6">
-                    <label for="generation_time">励振入力時間 : </label>
+                    <label for="response_time">励振入力時間 : </label>
                     <input type="text" value=100 class="form-control" name="response_time">
                 </div>
             </div>
