作成予定リストページ

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 <body>
     <nav class="navbar navbar-light bg-light p-3">
-        <a class="navbar-brand pl-3" href="/" style="font-size: 2rem;">Todoアプリ</a>
+        <a class="navbar-brand pl-3" href="/" style="font-size: 2rem;">非ガウス励振用アプリ</a>
     </nav>
     {% block body %}{% endblock %}
 </body>
