--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 <div class="container">
-    <a class="btn btn-info btn-lg m-5" href="/create" role="button">CREATE NEW TASK</a>
+    <a class="btn btn-info btn-lg m-5" href="/create" role="button">帯域幅のない分布</a>
     {% for post in posts %}
     <div class="card w-50 mb-3" style="margin: auto;">
         <div class="card-body">
